Liste plus jolie

--- a/index.html
+++ b/index.html
@@ -127,31 +127,62 @@
         <div id="resultats" class="col-xl-6 col-md-9">
 
           <div class="card">
-            <div class="row">
-              <div class="col-4"></div>
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4 fake-img-1"></div>
+                <div class="col-4">
+                  <h5 class="card-title">Charmant appart vue exceptionnelle</h5>
+                  <p class="card-text">3 voyageurs - 1 chambre - 2 lits - 1 salle de bain</p>
+                </div>
+                <div class="col-4">
+                  <p class="card-text">53€ par nuit</p>
+                </div>
               </div>
             </div>
           </div>
 
           <div class="card">
-            <h5 class="card-header">Featured</h5>
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="row">
+                <div class="col-4 fake-img-2"></div>
+                <div class="col-4">
+                  <h5 class="card-title">Studio des Olivettes</h5>
+                  <p class="card-text">2 voyageurs - Studio - 1 lit - 1 salle de bain</p>
+                </div>
+                <div class="col-4">
+                  <p class="card-text">40€ par nuit</p>
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="card">
-            <h5 class="card-header">Featured</h5>
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="row">
+                <div class="col-4 fake-img-3"></div>
+                <div class="col-4">
+                  <h5 class="card-title">Appartment spa hypercentre Nantes</h5>
+                  <p class="card-text">2 voyageurs - 1 chambre - 1 lit - 1 salle de bain</p>
+                </div>
+                <div class="col-4">
+                  <p class="card-text">65€ par nuit</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4 fake-img-4"></div>
+                <div class="col-4">
+                  <h5 class="card-title">Bel appartement en hypercentre</h5>
+                  <p class="card-text">4 voyageurs - 1 chambre - 2 lits - 1 salle de bain</p>
+                </div>
+                <div class="col-4">
+                  <p class="card-text">59€ par nuit</p>
+                </div>
+              </div>
             </div>
           </div>
 
