--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="page" class="container-fluid">
 
       <!-- RACCOURCIS FILTRES -->
-      <div class="row">
+      <div class="row mt-3 mb-4">
 
         <div class="d-md-none">
           <button class="btn btn-light">Dates</button>
@@ -74,9 +74,11 @@
         <!-- FILTRES -->
         <div id="filtres" class="col-xl-2 col-md-3 d-none d-md-block">
 
-          <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-light" onclick="affichage_classique()">Liste</button>
-            <button type="button" class="btn btn-light" onclick="carte_plein_ecran()">Carte</button>
+          <div class="text-center">
+            <div class="btn-group mt-3 mb-3" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-primary" onclick="affichage_classique()">Liste</button>
+              <button type="button" class="btn btn-primary" onclick="carte_plein_ecran()">Carte</button>
+            </div>
           </div>
 
           <div class="accordion" id="accordionInfoEssentielles">
