--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="assets/bootstrap-4.1.3-dist/css/bootstrap.css" />
-    <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.js"></script>
+    <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.bundle.js"></script>
     <!--LEAFLET-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="crossorigin=""></script>
@@ -57,14 +57,28 @@
       <div class="row mt-3 mb-4">
 
         <div class="d-md-none">
-          <button class="btn btn-light">Dates</button>
-          <button class="btn btn-light">Voyageurs</button>
+          <button class="btn btn-light" data-toggle="popover" data-content='<input type="text" class="form-control" placeholder="Arrivée -> Départ">'>Dates</button>
+          <button class="btn btn-light" data-toggle="popover" data-content='<input type="text" class="form-control" placeholder="Voyageurs">'>Voyageurs</button>
           <div class="d-none d-sm-inline">
-            <button class="btn btn-light">Type de logement</button>
-            <button class="btn btn-light">Prix</button>
-            <button class="btn btn-light">Plus de filtres</button>
+            <button class="btn btn-light" data-toggle="popover" data-content='
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" />
+                Logement entier
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" />
+                Chambre privée
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" />
+                Chambre partagée
+              </div>'>
+              Type de logement
+            </button>
+            <button class="btn btn-light" data-toggle="popover" data-content='<input type="range" min="9" max="1000" class="form-control">'>Prix</button>
+            <button class="btn btn-light" onclick="pas_autres_filtres()">Plus de filtres</button>
           </div>
-          <button class="btn btn-light d-inline d-sm-none">Filtres</button>
+          <button class="btn btn-light d-inline d-sm-none" onclick="autres_filtres()">Filtres</button>
         </div>
 
       </div>
@@ -97,6 +111,7 @@
               </div>
             </div>
           </div>
+<div id="autres-filtres">
 
           <div class="accordion" id="accordionPrix">
             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsePrix" aria-expanded="true" aria-controls="collapsePrix">
@@ -128,12 +143,12 @@
               </div>
             </div>
           </div>
-
+</div>
         </div>
 
         <!-- RESULTATS -->
         <div id="resultats" class="col-xl-6 col-md-9">
-
+          <h3>Plus de 300 logements</h3>
           <div class="card">
             <div class="card-body">
               <div class="row">
@@ -198,6 +213,14 @@
 
         <!-- CARTE -->
         <div id="carte" class="col-xl-4 d-none d-xl-block"></div>
+
+        <div id="modal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
